# tasman-dataeng-task

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN_DOC.md  DEV_LOG.md  IMPLEMENTATION_DOC.md  LICENSE  Makefile  README.md  json_parse.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/architecture/decisions/: 0001-runtime-extractor.md  0002-scheduling.md  0003-database.md  0004-data-model-shape.md  0005-idempotency-key-upsert.md  0006-secrets-management.md  0007-api-paging-and-limits.md  0008-db-security-and-durability.md  0009-data-quality.md  0010-integration-testing.md  index.md
docs/diagrams/: architecture.md  erd.md
infra/terraform/: iam_task.tf  main.tf  outputs.tf  providers.tf  s3_bronze.tf  secrets.tf  variables.tf
src/tasman_etl/: config.py  models.py  transform.py
src/tasman_etl/db/: engine.py  repository.py
src/tasman_etl/db/migrations/: 001_init.sql  002_child_timestamps.sql
src/tasman_etl/dq/gx/: validate.py
src/tasman_etl/http/: codelists.py  usajobs.py
src/tasman_etl/runner/: run.py
src/tasman_etl/storage/: bronze_s3.py
tests/: conftest.py
tests/integration/: test_run_ingest_integration.py  test_upsert.py
tests/smoke/: test_dq_smoke.py
tests/unit/: test_bronze_s3.py  test_models.py  test_run_ingest.py  test_transform.py  test_validate.py
