[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasman-etl"
version = "0.1.0"
description = "USAJOBS ETL: Chicago-focused data engineering roles → Postgres"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

# Runtime deps
dependencies = [
  "requests>=2.32",                 # HTTP client
  "pydantic>=2.7",                  # parse/validate API payloads (v2 validators)
  "sqlalchemy>=2.0",                # DB engine / SQL
  "psycopg[binary,pool]>=3.2",      # Postgres driver (v3)
  "tenacity>=8.3",                  # retries w/ backoff+ jitter
  "structlog>=24.1",                # JSON logs to stdout
  "python-dotenv>=1.0",             # local .env dev
  "boto3>=1.34",                    # S3 bronze (optional)
  "great-expectations>=0.18.0",     # data quality gate
  "typing-extensions>=4.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2", "pytest-cov>=5.0",
  "testcontainers>=4.7.2",
  "mypy>=1.10", "ruff>=0.5.0", "black>=24.4",
  # add "pre-commit" if you want to install via pip as well
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","PIE","C4","SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
